# memax

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.lock.txt  run_equinox_experiments.py  run_linen_experiments.py  setup.py
.github/workflows/: python_app.yaml
memax/datasets/: continuous_localization.py  hub.py  mnist_listops.py  mnist_math.py  sequential_mnist.py
memax/equinox/: gras.py  registry.py  train_utils.py
memax/equinox/models/: layer_mixer.py  multihead_residual.py  residual.py
memax/equinox/semigroups/: __init__.py  attn.py  delta.py  deltap.py  dlse.py  fart.py  ffm.py  fwp.py  gdn.py  identity.py  lrnn.py  lru.py  nmax.py  s6.py  spherical.py  stack.py  ttt.py
memax/equinox/set_actions/: elman.py  gru.py  indrnn.py  lstm.py  mgu.py  spherical.py
memax/experiments/: __init__.py  cli.py  config.py  datasets.py  losses.py  runner.py
memax/linen/: inits.py  train_utils.py
memax/linen/models/: residual.py
memax/linen/semigroups/: attn.py  delta.py  deltap.py  fart.py  ffm.py  fwp.py  gdn.py  lrnn.py  s6.py  spherical.py  stack.py  ttt.py
memax/linen/set_actions/: __init__.py  elman.py  gru.py  indrnn.py  lstm.py  mgu.py  spherical.py
tests/: test_associative_equinox.py  test_associative_linen.py  test_continuous_localization.py  test_initial_input_equinox.py  test_initial_input_linen.py  test_readme.py  test_reset_equinox.py
