[project]
name = "memax"
version = "0.1.1"
description = "Deep memory and sequence modeling in JAX"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "jax",
  "jaxlib",
  "jaxtyping",
  "optax",
  "beartype",
]

[project.optional-dependencies]
equinox = ["equinox"]
flax = ["flax"]
train = [
  "datasets",
  "tqdm",
  "pillow",
  "wandb",
]
all = [
  "equinox",
  "flax",
  "datasets",
  "tqdm",
  "pillow",
  "wandb",
]
test = ["pytest"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.isort]
profile = "black"
